manifests/prd/prometheus-adapter/Deployment-prometheus-adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/instance: prometheus-adapter
    app.kubernetes.io/name: prometheus-adapter
    app.kubernetes.io/part-of: prometheus-adapter
  name: prometheus-adapter
  namespace: monitoring
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: prometheus-adapter
      app.kubernetes.io/name: prometheus-adapter
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: 2b80c1e7b0098d1af464b3733bf21e1bac8062a27c66e70538aa07dc79504b03
      labels:
        app.kubernetes.io/component: metrics
        app.kubernetes.io/instance: prometheus-adapter
        app.kubernetes.io/name: prometheus-adapter
        app.kubernetes.io/part-of: prometheus-adapter
      name: prometheus-adapter
    spec:
      affinity: {}
      automountServiceAccountToken: true
      containers:
        - args:
            - /adapter
            - --secure-port=6443
            - --cert-dir=/tmp/cert
            - --prometheus-url=http://vmsingle-victoria-metrics.monitoring.svc:8428
            - --metrics-relist-interval=1m
            - --v=4
            - --config=/etc/adapter/config.yaml
          image: registry.k8s.io/prometheus-adapter/prometheus-adapter:v0.12.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 30
            timeoutSeconds: 5
          name: prometheus-adapter
          ports:
            - containerPort: 6443
              name: https
          readinessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 30
            timeoutSeconds: 5
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/adapter/
              name: config
              readOnly: true
            - mountPath: /tmp
              name: tmp
      nodeSelector: {}
      securityContext:
        fsGroup: 10001
      serviceAccountName: prometheus-adapter
      tolerations: []
      topologySpreadConstraints: []
      volumes:
        - configMap:
            name: prometheus-adapter
          name: config
        - emptyDir: {}
          name: tmp
